Fix small issue with nav tab spacing; decrease title size

--- a/src/demo/demo-components/DemoReadText/DemoReadText.css
+++ b/src/demo/demo-components/DemoReadText/DemoReadText.css
@@ -144,13 +144,6 @@
   cursor: pointer;
 }
 
-.main-area {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .text-area {
   margin: 0 10vmin 0 10vmin;
 }
